# dash_dash-license-scan

./: README.md  pyproject.toml
src/dash_license_scan/: __init__.py  cli.py  jar.py  main.py  parsers.py
tests/dash_license_scan/: common.py  test_dryrun_lockfiles.py  test_main.py
tests/dash_license_scan/data/: crate_1_expected.txt  pypi_1.txt  pypi_1_expected.txt
